2017-08-07  Martin Beranek

	* term/metapost.trm:  Support for user-defined dashtypes.

2017-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  "set key fixed" should be ignored in the case of
	"set view map".

2017-08-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c (set_table):  Implement "append" option for datablocks.
	Bug #1951

	* src/win/wd2d.cpp (d2dCreatePatternBrush):  Scale pattern with
	desktop DPI if not using a D2D 1.1 DeviceContext.

2017-08-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c:  Update FIXMEs, comments, remove typos, add 
	initialization to avoid compiler warning (false positive).

2017-08-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/watcom/Makefile (WCFLAGS, WPPFLAGS): Drop -j option,
	which turned plain char into signed.  That makes no sense anymore,
	now that we try to be 8-bit savvy.

2017-08-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h:
	Simplify the logic of macro ACTUAL_STORE_WITH_LOG_AND_UPDATE_RANGE

2017-08-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/watcom/Makefile:  Avoid expanding macros when extending the
	list of objects to build.

	* config/ming/Makefile:  Strip decorations when creating a 32bit
	library by using the -k option of dlltool. Revert the incorrect
	redirection change made on 2017-07-27.
	Bug #1942

2017-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Separate code path for calculating image grid
	coordinates for logscale axes is now redundant.

2017-07-31  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.ac src/axis.c src/axis.h src/color.c src/command.c
	src/mouse.c src/plot2d.c src/plot3d.c src/pm3d.c src/pm3d.h src/save.c
	src/set.c src/stats.c src/tabulate.c src/unset.c src/util3d.c:

	Version 5.2 introduced support for non-linear axes and used it to
	reimplement logscale.  The new implementation was enabled by default but